--- a/views/users.ejs
+++ b/views/users.ejs
@@ -23,7 +23,7 @@
       <div class="row col-md-12 custyle">
         <table class="table table-striped custab">
           <thead>
-            <a href="/user/add" class="btn btn-primary btn-xs pull-right"
+            <a href="/users/add" class="btn btn-primary btn-xs pull-right"
               ><b>+</b> Add new user</a
             >
             <tr>
@@ -44,10 +44,10 @@
               <td><%= user.createdAt %></td>
               <td><%= user.updatedAt %></td>
               <td class="text-center">
-                <a class="btn btn-info btn-xs" href="#"
+                <a class="btn btn-info btn-xs" href="/users/add"
                   ><span class="glyphicon glyphicon-edit"></span> Edit</a
                 >
-                <a href="#" class="btn btn-danger btn-xs"
+                <a href="/users/<%= user.id %>/delete" class="btn btn-danger btn-xs"
                   ><span class="glyphicon glyphicon-remove"></span> Del</a
                 >
               </td>
