--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -30,7 +30,7 @@
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-	               		<h1 class="title">Add new User</h1>
+	               		<h1 class="title">Edit User</h1>
 	               		<hr />
 	               	</div>
 	            </div> 
@@ -41,7 +41,7 @@
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-									<input type="text" class="form-control" name="firstName" id="name"  placeholder="Enter First Name"/>
+									<input type="text" class="form-control" name="firstName" id="firstName"  placeholder="<%=firstName%>"/>
 								</div>
 							</div>
 						</div>
@@ -51,13 +51,13 @@
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-									<input type="text" class="form-control" name="lastName" id="username"  placeholder="Enter Last Name"/>
+									<input type="text" class="form-control" name="lastName" id="lastName"  placeholder="<%=lastName%>"/>
 								</div>
 							</div>
 						</div>
 
 						<div class="form-group ">
-							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Add</button>
+							<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Update</button>
 						</div>
 			
 					</form>
